# com.github.diegonehab-luasocket

./: .build  .build.sh  .build05_artefacts.sh  .build_common.sh  .lxc_build_all.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  README.md  build_artifact.py
luasocket/: CMakeLists.txt  __README__.txt
luasocket/installer/lua5.1/: CMakeLists.txt  luasocket.xml
luasocket/installer/lua5.2/: CMakeLists.txt  luasocket.xml
luasocket/installer/lua5.3/: CMakeLists.txt  luasocket.xml
luasocket/installer/lua5.4/: luasocket.xml
luasocket/patches/: 001_increase_buffers_for_errormessages.diff
luasocket/templates/: CMakeLists.txt
